# Maturity_Check

./: .gitignore  Architecture_Prompt.md  EPIC_Prompt.md  Folder_Structure.md  M5D.md  MDAP_Prompt.md  OUTPUT_TEMPLATE.md  PRD_Prompt.md  PROMPT_TO_IMPROVE_PLAN.md  README.md  UNIVERSAL_PHASE_GATES.md  pyproject.toml
Plan/00_PENDENCIES/: epic_drafting_readiness.md  pendencias_pre_epic.md  pre_epic_implementation_trace.md  pre_epic_resolved_decisions.md
Plan/01_PRD/: prd.md
Plan/02_EPIC/: EPIC_DOCUMENT.md
Plan/02_SETUP/: installation_inventory.md
Plan/03_EPIC/: EPIC_DOCUMENT.md
Plan/06_Models/case_type_manifest/: rio_ppp_v1.json
Plan/06_Models/crosswalk/: OQ-002_action1_complement_rule.md  README.md  VERIFICATION_FR008_action1.md  action_1_subtask_1_1.template.md  action_1_subtasks_1_2_to_1_6.template.md
Plan/07_RETRIEVAL/: OQ-005_resolution.md  nfr_008_deployment_boundary.md  retrieval_satisficing_rules.md  vector_storage_options.md
Plan/08_TASK_REGISTRY/: 00_START_HERE.md  CLAUDE_COPILOT_INTEGRATION_GUIDE.md  EXECUTIVE_SUMMARY_AND_TIMELINE.md  INDEX.md  MASTER_TASK_REGISTRY.md  PHASE_1_DETAILED_PLAN.md  PHASE_1_TASK_CHECKLIST.md  PHASE_2_DETAILED_PLAN.md  PHASE_2_TASK_CHECKLIST.md  README.md  REQUIREMENTS_MAPPING.md  TASK_UPDATE_TEMPLATE.md
src/maturity_check/: cli.py  crosswalk_extract.py  db.py  reference_search.py
src/maturity_check/ingest/: README.md  __init__.py  chunking.py  m5d_ingest.py
